# Vehicle-Control-Sotfware

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  SECURITY.md  packages.txt
Tools/arduino/nodemcu_esp8266/: nodemcu_esp8266.ino
Tools/rviz/: vehicle_config.rviz
Tools/simulation/: README.md
Tools/simulation/worlds/: land_vehicle.sdf  test.sdf
land_vehicle/: CMakeLists.txt
land_vehicle/launch/: start_launch.py  vehicle_start.launch.py
land_vehicle/models/first_model/: ground_plane.sdf
land_vehicle/models/marble_husky/: model.sdf
land_vehicle/models/vehicle/: model.config  model.sdf
land_vehicle/src/: CMakeLists.txt
land_vehicle/worlds/: ex_1.sdf  land_vehicle.sdf  land_vehicle_world.sdf
rviz/: safe_drive.rviz  visual.rviz
src/camera_recorder/: package.xml  setup.py
src/camera_recorder/camera_recorder/: camera_recorder.py
src/command/: CMakeLists.txt  package.xml
src/command/include/: command.hpp
src/command/src/: command.cpp
src/config/: package.xml
src/config_file/: CMakeLists.txt  package.xml
src/controller/: CMakeLists.txt  package.xml
src/controller/include/: controller.hpp  controller_node.hpp  controller_type.hpp  geometry_utils.hpp  obstacle_avoidance.hpp
src/controller/src/: command.cpp  controller.cpp  controller_node.cpp  geometry_utils.cpp  obstacle_avoidance.cpp
src/filter_scan/: package.xml  setup.cfg  setup.py
src/filter_scan/filter_scan/: filter_angle_scan.py  filter_distance_scan.py  filter_scan.py
src/gz_bridge/create_model/: CMakeLists.txt  package.xml
src/gz_bridge/create_model/include/: create_model_node.hpp
src/gz_bridge/create_model/src/: create_model_node.cpp
src/gz_bridge/data_bridge/: CMakeLists.txt  package.xml
src/include/: tic_toc.hpp
src/include/filters/: CMakeLists.txt  package.xml
src/include/filters/include/: filters.hpp  filters_type.hpp
src/include/filters/src/: filters.cpp
src/include/geometric_operations/: CMakeLists.txt  package.xml
src/include/geometric_operations/include/: geometric_operations.hpp  geometric_operations_type.hpp
src/include/geometric_operations/src/: affine_transformation.cpp  geometric_operations.cpp
src/include/geometry_utils/: CMakeLists.txt  package.xml
src/include/geometry_utils/include/: geometry_utils.hpp
src/include/geometry_utils/src/: geometry_utils.cpp
src/include/kalman_filter/: CMakeLists.txt  package.xml
src/include/num_tools/: CMakeLists.txt  package.xml
src/include/num_tools/include/: num_tools.hpp
src/include/num_tools/src/: num_tools.cpp
src/include/time_utility/: CMakeLists.txt  package.xml
src/include/time_utility/include/: tic_toc.hpp
src/include/time_utility/src/: tic_toc.cpp
src/include/time_utils/: CMakeLists.txt  package.xml
src/include/time_utils/include/: tic_toc.hpp
src/include/time_utils/src/: tic_toc.cpp
src/land_vehicle/: CMakeLists.txt  package.xml
src/land_vehicle/launch/: start_launch.py
src/land_vehicle/worlds/: land_vehicle.sdf
src/modules/battery_state/: CMakeLists.txt  package.xml
src/modules/camera/: setup.py  (+1 more)
src/modules/commander/: CMakeLists.txt  package.xml
src/modules/commander/include/: commander_node.hpp  commander_type.hpp  commander_types.hpp  commander_visualization.hpp  obstacle_avoidance.hpp
src/modules/commander/include/avoidance/: avoidance.hpp  histogram.hpp  obstacle_avoidance.hpp
src/modules/commander/include/estimator/: estimator.hpp
src/modules/commander/src/: commander_node.cpp  commander_visualization.cpp  obstacle_avoidance.cpp
src/modules/commander/src/avoidance/: avoidance.cpp  histogram.cpp  obstacle_avoidance.cpp
src/modules/commander/src/estimator/: estimator.cpp
src/modules/control_unit/: CMakeLists.txt  package.xml
src/modules/control_unit/include/: control_unit.hpp  control_unit_node.hpp  control_unit_type.hpp
src/modules/control_unit/include/control/: esp8266.hpp  joystick.hpp  keyboard.hpp
src/modules/control_unit/src/: control_unit_node.cpp
src/modules/control_unit/src/control/: esp8266.cpp  joystick.cpp  keyboard.cpp
src/modules/estimator/: CMakeLists.txt  package.xml
src/modules/estimator/include/: complementary_filter.hpp  estimator_node.hpp  estimator_node_type.hpp  mahony_orientation_filter.hpp
src/modules/estimator/src/: complementary_filter.cpp  estimator_node.cpp  mahony_orientation_filter.cpp
src/modules/gz_bridge/: CMakeLists.txt  package.xml
src/modules/gz_bridge/include/: gz_bridge_node.hpp
src/modules/gz_bridge/src/: gz_bridge_node.cpp
src/modules/secure_drive_vehicle/: CMakeLists.txt  package.xml
src/modules/secure_drive_vehicle/config/: params.yml
src/modules/secure_drive_vehicle/launch/: drive_launch.py  gazebo_bridge_launch.py  start_launch.py
src/modules/sensor_listener/: CMakeLists.txt  package.xml
src/modules/sensor_listener/include/: sensor_listener_node.hpp
src/modules/sensor_listener/src/: sensor_listener_node.cpp
src/remote_selector/: CMakeLists.txt  package.xml
src/remote_selector/esp8266/: esp8266.ino
src/remote_selector/include/: command.hpp  geometry_utils.hpp  remote_selector_node.hpp  remote_selector_type.hpp
src/remote_selector/src/: command.cpp  geometry_utils.cpp  joystick_control.cpp  keyboard_control.cpp  remote_selector_node.cpp  serial_cntrol.cpp
src/sensor_reader/: CMakeLists.txt  package.xml
src/sensor_reader/include/: sensors_reader.hpp
src/sensor_reader/src/: sensors_reader.cpp
src/sensors/mpu6050_driver/: CMakeLists.txt  package.xml
src/sensors/mpu6050_driver/config/: params.yml
src/sensors/mpu6050_driver/include/: mpu6050.hpp  mpu6050_driver_node.hpp  mpu6050_type.hpp
src/sensors/mpu6050_driver/launch/: mpu6050_driver.launch.py
src/sensors/mpu6050_driver/src/: mpu6050.cpp  mpu6050_driver_node.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: params.yaml
src/simulation/launch/: start_launch.py
src/simulation/models/marble_husky/: model.sdf
src/simulation/models/urdf/: marble_husky.urdf  multipleshapes.urdf  origins.urdf
src/vehicle_control_software/: CMakeLists.txt
subnet/: metadata.yaml  subnet_0.db3
(+78 files in other folders)
